objects/CN_Return__c.object
<CustomObject>
    <fields>
        <fullName>CN_Amount_Unit__c</fullName>
        <label>Amount/Unit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Batch__c</fullName>
        <label>Batch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_NO__c</fullName>
        <formula>CN_Customer__r.CN_Customer_Code__c</formula>
        <label>Customer NO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Returns</relationshipLabel>
        <relationshipName>Returns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Description__c</fullName>
        <formula>CN_Material__r.Description</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Returns</relationshipLabel>
        <relationshipName>Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Return_Quantity__c</fullName>
        <label>Return Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Return_Reason__c</fullName>
        <label>Return Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Return_Type__c</fullName>
        <label>Return Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RE - 订单信息有误</fullName>
                </value>
                <value>
                    <fullName>RE - 保质期问题 Shelf life</fullName>
                </value>
                <value>
                    <fullName>RE - 产品质量问题 Product Quality issues</fullName>
                </value>
                <value>
                    <fullName>RE - 打错订单信息 CS</fullName>
                </value>
                <value>
                    <fullName>RE - 订单信息有误 Wrong Order Information</fullName>
                </value>
                <value>
                    <fullName>RE - 配货有误 Wrong Picking</fullName>
                </value>
                <value>
                    <fullName>RE - 破损 Damage</fullName>
                </value>
                <value>
                    <fullName>RE - 其他 Others</fullName>
                </value>
                <value>
                    <fullName>RE - 其他运输原因 Other Delivery Reason</fullName>
                </value>
                <value>
                    <fullName>RE - 卫检证书及保函原因 Certificates issues</fullName>
                </value>
                <value>
                    <fullName>RE - 条码问题  Bar Code Issues</fullName>
                </value>
                <value>
                    <fullName>RE - 客户退回</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sales_Document__c</fullName>
        <label>Sales Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Return</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Customer__c</columns>
        <columns>CN_Amount_Unit__c</columns>
        <columns>CN_Batch__c</columns>
        <columns>CN_Customer_NO__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CN_Date__c</columns>
        <columns>CN_Material__c</columns>
        <columns>CN_Plant__c</columns>
        <columns>CN_Return_Quantity__c</columns>
        <columns>CN_Return_Reason__c</columns>
        <columns>CN_Return_Type__c</columns>
        <columns>CN_Sales_Document__c</columns>
        <columns>CN_Total_Amount__c</columns>
        <columns>CN_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Return__c.CN_Return</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RO-{0000000000}</displayFormat>
        <label>Return Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Returns</pluralLabel>
    <recordTypes>
        <fullName>CN_Return</fullName>
        <active>true</active>
        <label>CN Return</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CN_Return_Account_Has_Approved</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c, 
  BEGINS(RecordType.DeveloperName, &quot;CN&quot;),
  ISNEW(),
  NOT(ISPICKVAL( CN_Customer__r.CN_Sync_Status__c , &quot;Success&quot;))
)</errorConditionFormula>
        <errorMessage>You can&apos;t create the returns for the account which is  not synced.</errorMessage>
    </validationRules>
</CustomObject>